--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "license": "LGPL-3.0-or-later",
   "require": {
     "php": "^7.1",
-    "symfony/framework-bundle": "^3.4",
+    "symfony/framework-bundle": "^3.4|^4.0",
     "contao/core-bundle": "^4.4",
-    "heimrichhannot/contao-multi_column_editor": "^1.4"
+    "heimrichhannot/contao-multi-column-editor-bundle": "^1.2|^2.4"
   },
   "require-dev": {
     "contao/test-case": "^1.1",
