--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,14 @@ matrix:
       env: CONTAO_VERSION='4.4.*'
     - php: 7.3
       env: CONTAO_VERSION='4.4.*'
-    - php: 7.1
+    - php: 7.2
       env: CONTAO_VERSION='4.9.*'
-    - php: 7.3
+    - php: 7.4
       env: CONTAO_VERSION='4.9.*'
-    - php: 7.3
+    - php: 7.4
       env: COVERAGE=1 CONTAO_VERSION='4.9.*'
   allow_failures:
-    - env: COVERAGE=1 UPDATEDOC=1 DEFAULT=0
+    - env: COVERAGE=1 DEFAULT=0
   fast_finish: true
 before_install:
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
